# ufsrv

./: .gitignore  .ufsrv-ver  CMakeLists.txt  Makefile.not_in_use  README.md
src/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile.not_in_use  SignalService.pb-c.c  WebSocketMessage.pb-c.c  adt_doubly_linkedlist.c  adt_hopscotch_hashtable.c  adt_lamport_queue.c  adt_locking_lru.c  adt_minheap.c  api_endpoint_v1_account.c  api_endpoint_v1_receipt.c  api_endpoint_v1_server.c  api_endppoint_v1_call.c  api_endppoint_v1_fence.c  api_endppoint_v1_message.c  api_endppoint_v1_registery.c  api_endppoint_v1_user.c  attachments.c  call_broadcast.c  call_command_broadcast.c  call_command_controller.c  command_console_thread.c  configfile.c  crypto_certificates.pb-c.c  db_abstraction.c  db_mysql.c  delegator_msgqueue_subscriber_thread.c  delegator_session_io_worker_thread.c  delegator_timer_thread.c  dictionary.c  fence.c  fence_broadcast.c  fence_command_controller.c  fence_events.c  fence_permission.c  fence_proto.c  fence_state.c  fence_utils.c  (+85 more)
src/K12/: CMakeLists.txt  KangarooTwelve.h
src/curve25519/: CMakeLists.txt
src/hiredis/: CMakeLists.txt  dict.c
src/http_rest/: CMakeLists.txt  codecs.h  dictionary.c  dictionary.h  dictionary_type.h  h_codecs.c  h_mime.c  h_ptr_list.c  mime.h  ptr_list.h  ptr_list_type.h  vector.c  vector.h  vector_type.h
src/include/: SignalService.pb-c.h  UfsrvMessageQueue.pb-c.h  WebSocketMessage.pb-c.h  account_attribute_names.h  adt_doubly_linkedlist.h  adt_hopscotch_hashtable.h  adt_lamport_queue.h  adt_locking_lru.h  adt_locking_lru_type.h  adt_minheap.h  adt_minheap_type.h  api_endpoint_v1_account.h  api_endpoint_v1_call.h  api_endpoint_v1_fence.h  api_endpoint_v1_message.h  api_endpoint_v1_receipt.h  api_endpoint_v1_registry.h  api_endpoint_v1_server.h  api_endpoint_v1_user.h  attachment_descriptor_type.h  attachments.h  backendconfig_type.h  call_broadcast.h  call_command_broadcast.h  cdt_anderson_spinlock.h  cdt_optik_lock.h  codecs.h  command_base_context_type.h  command_console_thread.h  command_controllers.h  config.h  config.h.in  config_nonpublic.h  configfile.h  confkeywords.h  crypto_certificates.pb-c.h  crypto_zkgroup.h  db_sql.h  delegator_session_worker_thread.h  dictionary.h  (+142 more)
src/lexer/: .gitignore  Makefile  minilex.c
src/lzf/: CMakeLists.txt  Makefile
src/protobuf/: .gitignore  Backups.proto  Makefile  SignalService.proto  UfsrvMessageQueue.proto  WebSocketMessage.proto  crypto_certificates.proto
src/protobuf-c/: CMakeLists.txt  protobuf-c.c  protobuf-c.h
src/recycler/: CMakeLists.txt  instance_type.h  instances_list.c  instances_list.h  instances_list_type.h  recycler.c  recycler.h  recycler_log_strings.h  recycler_type.h
src/uflib/: CMakeLists.txt  tokeniser.c  ufsrvuid.c  utils_b64.c  utils_base32.c  utils_bits.c  utils_crypto.c  utils_curve.c  utils_file.c  utils_hex.c  utils_str.c  utils_time.c  utils_url.c
src/uflib/adt/: adt_doubly_linkedlist.c  adt_doubly_linkedlist.h  adt_doubly_linkedlist_type.h  adt_hopscotch_hashtable.c  adt_hopscotch_hashtable.h  adt_hopscotch_hashtable_type.h  adt_lamport_queue.c  adt_lamport_queue.h  adt_linkedlist.c  adt_linkedlist.h  adt_minheap.c  adt_minheap.h  adt_minheap_type.h  adt_queue.c  adt_queue.h
src/uflib/db/: db_abstraction.c  db_mysql.c  db_op_descriptor_type.h  db_ops.c  db_sql.h  dp_ops.h
src/uflib/include/: base32.h  file_info_type.h  hexcodec.h  main_types.h  open_file_type.h  standard_c_includes.h  standard_defs.h  standard_net_includes.h  standard_ssl_includes.h  tokeniser.h  ufsrvuid.h  ufsrvuid_type.h  utils_b64.h  utils_bits.h  utils_crypto.h  utils_file.h  utils_hex.h  utils_str.h  utils_time.h  utils_urls.h  uuid_type.h
src/uflib/scheduled_jobs/: scheduled_jobs.c  scheduled_jobs.h  scheduled_jobs_type.h
src/ufsrv_core/: CMakeLists.txt  SignalService.pb-c.c  SignalService.pb-c.h  delegator_timer_thread.c  hashtable.c  misc.c  net.c  session.c  session_service.c  session_utils.c  share_list.c  utils_db_account.c
src/ufsrv_core/cache_backend/: persistance.c  persistance.h  persistance_type.h  redis.c  redis.h  redis_backend_type.h
src/ufsrv_core/fence/: fence_event_type.h  fence_events.c  fence_permission.c  fence_permission.h  fence_permission_type.h  fence_protobuf.c  fence_protobuf.h  fence_state.c  fence_state.h  fence_state_descriptor_type.h  fence_type.h  fence_utils.c  fence_utils.h
src/ufsrv_core/include/: backendconfig_type.h  hashtable.h  hashtable_type.h  misc.h  net.h  network_socket_address.h  network_socket_address_type.h  session.h  session_service.h  session_service_type.h  session_type.h  share_list.h  share_list_type.h  socket_message_type.h  socket_type.h  sockets.h  ufsrv_events.h  ufsrvresult_type.h  utils_db_account.h
src/ufsrv_core/instrumentation/: instrumentation_backend.h  instrumentation_backend_type.h  instrumentation_statsd.c
src/ufsrv_core/location/: location.c  location.h  location_type.h
src/ufsrv_core/msgqueue_backend/: UfsrvMessageQueue.pb-c.c  UfsrvMessageQueue.pb-c.h  ufsrv_msgcmd_type_enum.h  ufsrvcmd_broadcast.c  ufsrvcmd_broadcast.h  ufsrvcmd_broadcast_type.h  ufsrvmsgqueue.c  ufsrvmsgqueue.h  ufsrvmsgqueue_type.h
src/ufsrv_core/protocol/: CMakeLists.txt  protocol.c  protocol.h  protocol_io.c  protocol_io.h  protocol_type.h
src/ufsrv_core/user/: users.c  (+13 more)
src/ufsrvrest/: CMakeLists.txt  api_endpoint_v1_account.c  api_endpoint_v1_receipt.c  api_endpoint_v1_server.c  api_endppoint_v1_call.c  api_endppoint_v1_fence.c  api_endppoint_v1_message.c  api_endppoint_v1_registery.c  api_endppoint_v1_user.c  fence_protobuf.c  fence_zkgroup_utils.c  protocol_http.c  protocol_http_attachments.c  protocol_http_basic_auth.c  protocol_http_io.c  protocol_http_session.c  protocol_http_user.c
src/ufsrvwebsock/: CMakeLists.txt  WebSocketMessage.pb-c.c  fence_proto.c  protocol_websocket_io.c  protocol_websocket_routines.c  protocol_websocket_session.c  protocol_websockets.c
src/zkgroup_utils/: CMakeLists.txt  credential_response_type.h  group_credential_type.h  utils_zkgroup.c  utils_zkgroup.h  zkgroup_server_params_type.h
(+58 files in other folders)
